<resources>
    <string name="app_name">CheatDay</string>
    <string name="home_counter_title_cheat_day">CHEAT DAYS</string>
    <string name="home_counter_title_diet_day">DIET DAYS</string>
    <string name="home_counter_title_workout_day">WORKOUT DAYS</string>
    <string name="channel_name">Common</string>
    <string name="channel_description">Notifications from application</string>
    <string name="notification_every_day_sum_up">Sum up your day</string>
    <string name="menu_home">Home</string>
    <string name="menu_weight">Weight</string>
    <string name="weight_row_date_label">Date:</string>
    <string name="unit_kg_short">kg</string>
    <string name="weights_min_label">MIN WEIGHT:</string>
    <string name="weights_target_label">TARGET WEIGHT:</string>
    <string name="weights_max_possible_label">MAX POSSIBLE WEIGHT:</string>
    <string name="weights_week_average_label">WEEK AVERAGE WEIGHT:</string>
    <string name="common_add">Add</string>
    <string name="common_update">Update</string>
    <string name="weight_hint">Weight</string>
    <string name="date_hint">Date</string>
    <string name="dialog_error_title_common">Error</string>
    <string name="dialog_error_message_try_later">Error has occurred. Try again later.</string>
    <string name="dialog_change_target_weight_message">Change target weight</string>
    <string name="dialog_change_max_weight_message">Change max weight</string>
    <string name="ok">ok</string>
    <string name="cancel">cancel</string>
    <string name="menu_chart">Show chart</string>
    <string name="menu_login">Log in</string>
    <string name="menu_logout">Log out</string>
    <string name="hint_email">user@mail.com</string>
    <string name="hint_password">Password</string>
    <string name="login_screen_submit_button">Login</string>
    <string name="remove_weight_dialog_title">Remove weight</string>
    <string name="remove_weight_dialog_message">Do you want to remove weight result?</string>
    <string name="button_try_again">Try again</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="weights_chip">Weights chart</string>
    <string name="average_chip">Average weights chart</string>
</resources>
