<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/chart_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/half_padding"
        android:orientation="vertical">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/options_chips"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:checkedChip="@id/weights_chart_chip"
            app:selectionRequired="true"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/weights_chart_chip"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weights_chip" />

            <com.google.android.material.chip.Chip
                android:id="@+id/average_chart_chip"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/average_chip" />

        </com.google.android.material.chip.ChipGroup>

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/chart"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

    <include
        layout="@layout/layout_progress"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <com.marzec.cheatday.view.delegates.errorscreen.ErrorView
        android:id="@+id/error_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:ev_button_label="@string/button_try_again" />

</FrameLayout>
